# resumable

./: LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements.txt  resumable.py
.github/: dependabot.yml
.github/workflows/: build.yml
tests/: test_simple.py
