[tool.poetry]
name = "resumable"
version = "0.1.0"
description = ""
authors = ["Elliana May <me@mause.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
astmonkey = "^0.3.6"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
